--- a/js101/dragon.css
+++ b/js101/dragon.css
@@ -1,8 +1,42 @@
+
+h2 {
+	text-align: center;
+}
+
 img {
 
 	margin: auto;
 }
 
-#the fight input {
-	float: left;
+.pics {
+	position: relative;
 }
+
+#container{
+	margin: auto;
+	
+
+}
+
+body {
+	margin: auto;
+	max-width: 960px;
+}
+
+#dragon {
+	width: 100%;
+	position: relative;
+	top: 0px;
+	left: 0px;
+	z-index: 1;
+
+}
+
+
+#fleeing {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 0;
+}
+
